RESOLVED FIXED21557
REGRESSION: generated-layer-scrollbar-crash.html is crashing
https://bugs.webkit.org/show_bug.cgi?id=21557
Summary REGRESSION: generated-layer-scrollbar-crash.html is crashing
Darin Adler
Reported 2008-10-12 11:49:12 PDT
The regression test is failing because of new code in RenderLayer::styleChanged.
Attachments
patch (1.65 KB, patch)
2008-10-12 11:58 PDT, Darin Adler
mrowe: review+
Darin Adler
Comment 1 2008-10-12 11:58:03 PDT
This crash is caused by the code that tries to get the pseudo style for the scroll bar and resizer in RenderLayer::styleChanged. It's being called on a RenderView, which has a document for its element and thus can't be styled. I suspect that's a bug, but it's easy to fix this code to be robust in cases like this, which is what I did.
Darin Adler
Comment 2 2008-10-12 11:58:26 PDT
Mark Rowe (bdash)
Comment 3 2008-10-12 15:45:38 PDT
Comment on attachment 24304 [details] patch r=me
Darin Adler
Comment 4 2008-10-12 15:54:47 PDT
Note You need to log in before you can comment on or make changes to this bug.