WebCore/rendering/RenderObject.cpp
@@ -2835,7 +2835,7 @@ RenderStyle* RenderObject::getPseudoStyle(RenderStyle::PseudoId pseudo, RenderSt
         return result;
 
     Node* node = element();
-    if (node && isText())
+    while (node && !node->isElementNode())
         node = node->parentNode();
     if (!node)
         return 0;
